tilbage til top knap fixet med z-index

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -655,7 +655,7 @@ z-index: 30;
     background-position:center;
     background-repeat: no-repeat;
     transition: .3s;
-
+z-index: 90;
 
 
     left: 50%;
@@ -902,11 +902,6 @@ z-index: 30;
         background-color: rgba(0, 0, 0, 1);
         width: 100%;
         height: 120%;
-
-
-
-
-
     }
 
     .link_container {
